<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="34dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="34dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="6dp"
                android:background="@color/transparent"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tv_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="28dp"
                    android:background="@drawable/btn_custom"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/btn_custom_login"
                android:fontFamily="@font/inter_regular"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/input_password">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/register"
                    android:textColor="@color/text" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>