<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.update.password.UpdatePasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_edit_password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@color/text"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/edit_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="34dp"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/old_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parent_edit_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_old_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_old_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/enter_your_old_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="14sp"
                app:counterEnabled="true"
                app:counterMaxLength="8" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_old_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_new_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/enter_your_new_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/btn_custom_login"
            android:fontFamily="@font/inter_regular"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
