<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.update.profile.UpdateProfileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@color/text"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/parent_biodata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/parent_edit_profile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"
                android:background="@drawable/ic_person_black"/>

            <TextView
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/change_photo"
                android:textColor="@color/text"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/inter_regular"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_edit"
                tools:text="Elizabeth Becky"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="34dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/school"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_school"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:background="@color/transparent">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@drawable/btn_custom"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/choose_school"
                    android:inputType="none"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_custom_login"
            android:fontFamily="@font/inter_regular"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
